set 6/44/strings/error.txt
   [Compiling] safeat.cc
safeat.cc: In member function ‘std::__cxx11::string& Strings::safeAt(size_t) const’:
safeat.cc:11:9: error: reference to ‘empty’ is ambiguous
         empty.clear();
         ^~~~~
safeat.cc:4:12: note: candidates are: std::__cxx11::string {anonymous}::empty
     string empty;
            ^~~~~
In file included from /usr/include/c++/7.2.0/string:51:0,
                 from /usr/include/c++/7.2.0/bits/locale_classes.h:40,
                 from /usr/include/c++/7.2.0/bits/ios_base.h:41,
                 from /usr/include/c++/7.2.0/ios:42,
                 from /usr/include/c++/7.2.0/istream:38,
                 from strings.ih:3,
                 from safeat.cc:1:
/usr/include/c++/7.2.0/bits/range_access.h:278:5: note:                 template<class _Tp> constexpr bool std::empty(std::initializer_list<_Tp>)
     empty(initializer_list<_Tp> __il) noexcept
     ^~~~~
/usr/include/c++/7.2.0/bits/range_access.h:269:5: note:                 template<class _Tp, long unsigned int _Nm> constexpr bool std::empty(const _Tp (&)[_Nm])
     empty(const _Tp (&/*__array*/)[_Nm]) noexcept
     ^~~~~
/usr/include/c++/7.2.0/bits/range_access.h:260:5: note:                 template<class _Container> constexpr decltype (__cont.empty()) std::empty(const _Container&)
     empty(const _Container& __cont) -> decltype(__cont.empty())
     ^~~~~
safeat.cc:12:16: error: reference to ‘empty’ is ambiguous
         return empty;
                ^~~~~
safeat.cc:4:12: note: candidates are: std::__cxx11::string {anonymous}::empty
     string empty;
            ^~~~~
In file included from /usr/include/c++/7.2.0/string:51:0,
                 from /usr/include/c++/7.2.0/bits/locale_classes.h:40,
                 from /usr/include/c++/7.2.0/bits/ios_base.h:41,
                 from /usr/include/c++/7.2.0/ios:42,
                 from /usr/include/c++/7.2.0/istream:38,
                 from strings.ih:3,
                 from safeat.cc:1:
/usr/include/c++/7.2.0/bits/range_access.h:278:5: note:                 template<class _Tp> constexpr bool std::empty(std::initializer_list<_Tp>)
     empty(initializer_list<_Tp> __il) noexcept
     ^~~~~
/usr/include/c++/7.2.0/bits/range_access.h:269:5: note:                 template<class _Tp, long unsigned int _Nm> constexpr bool std::empty(const _Tp (&)[_Nm])
     empty(const _Tp (&/*__array*/)[_Nm]) noexcept
     ^~~~~
/usr/include/c++/7.2.0/bits/range_access.h:260:5: note:                 template<class _Container> constexpr decltype (__cont.empty()) std::empty(const _Container&)
     empty(const _Container& __cont) -> decltype(__cont.empty())
     ^~~~~
make: *** [Makefile:451: safeat.o] Error 1
